fix: Change shared button size on mobile
+ padding for better actions distribution

--- a/src/styles/filelist.styl
+++ b/src/styles/filelist.styl
@@ -110,7 +110,7 @@
     display none
 
 .fil-content-mobile-header
-    padding 1rem
+    padding .5rem
 
 .fil-content-header-sortableasc:hover:after
 .fil-content-header-sortabledesc:hover:after
